<resources>
    <string name="app_name">Jejewegs</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login or Register?</string>
    <string name="action_sign_in_short">SignIn</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Username not valid</string>
    <string name="continue_with_google">SignIn with Google</string>
    <string name="invalid_password">Password must > 5 characters</string>
    <string name="login_failed">Failed to login</string>
    <string name="signout">Sign out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forget Password?</string>
    <string name="new_user">New User?</string>
    <string name="register_here">Register Here</string>

    <string name="register">Register</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="create_review">Create Review</string>
    <string-array name="brands">
        <item>@string/nike</item>
        <item>@string/adidas</item>
        <item>@string/puma</item>
        <item>@string/skechers</item>
        <item>@string/reebok</item>
    </string-array>
    <string-array name="choices">
        <item>@string/all_rated</item>
        <item>@string/top_rated</item>
        <item>@string/nike</item>
        <item>@string/adidas</item>
        <item>@string/puma</item>
        <item>@string/skechers</item>
        <item>@string/reebok</item>
    </string-array>
    <string-array name="orders">
        <item>@string/none</item>
        <item>@string/like_asc</item>
        <item>@string/rate_asc</item>
        <item>@string/like_desc</item>
        <item>@string/rate_desc</item>
    </string-array>
    <string name="tag_prompt">Choose a brand</string>
    <string name="review_description">Description:</string>
    <string name="rate_min_1_max_5">Rate (Min 1, Max 5)</string>
    <string name="create_post">Create Post!</string>
    <string name="add_image">Add Image</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="hello_home">hello home</string>
    <string name="hello_profile">hello profile</string>
    <string name="followings">Followings</string>
    <string name="followers">Followers</string>
    <string name="reviews">Reviews</string>
    <string name="full_name">Full Name</string>
    <string name="location">Location</string>
    <string name="favorite_sneaker">Favorite Sneaker</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="review_title">Title:</string>
    <string name="review_brand">Brand:</string>
    <string name="review_rate">Rate:</string>
    <string name="reviewer_id">Reviewer Id:</string>
    <string name="review_like_count">Like Count:</string>
    <string name="review_comment_count">Comment Count:</string>
    <string name="fullname_must_filled">Full Name must be filled</string>
    <string name="location_must_filled">Location must be filled</string>
    <string name="favoritesneaker_must_filled">Favorite Sneaker must be filled</string>
    <string name="email_must_filled">Email must be filled</string>
    <string name="email_format_wrong">Email format wrong</string>
    <string name="password_must_filled">Password must be filled</string>
    <string name="invalid_credential">INVALID CREDENTIAL</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="password_minimum_length">Password must between 5 - 20 characters</string>
    <string name="register_sucess">Register Successful</string>
    <string name="allfield_must_filled">All field must be filled</string>
    <string name="rate_boundaries">Rate must between 1 and 5</string>
    <string name="must_add_picture">Must add picture</string>
    <string name="create_review_sucess">Successful create review</string>
    <string name="progressCreateMessage">Uploading Review</string>
    <string name="logout">logout</string>
    <string name="setting">Setting</string>
    <string name="delete_account">Delete Account</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="profile_tab">Profile</string>
    <string name="setting_tab">Setting</string>
    <string name="verification_account">Verification Account</string>
    <string name="your_password">Your password</string>
    <string name="verification">Verification</string>
    <string name="account_verification">Account Verification</string>
    <string name="pass_conf_pass">Password and confirm password must be same</string>
    <string name="success_change_pass">Sucessfully change password</string>
    <string name="login_again">Please login again</string>
    <string name="wishlist">Wishlist</string>
    <string name="top_rated">Top Rated</string>
    <string name="all_rated">All Rated</string>
    <string name="give_rating">Give rating</string>
    <string name="give_rate">Give</string>
    <string name="average_rating">Average rating</string>
    <string name="success_update">Successfully update</string>
    <string name="change">Change</string>

    <string name="search_user">Search User</string>
    <string name="search_review">Search Review</string>
    <string name="search">Search</string>
    <string name="type_here">Type Here</string>
    <string name="back_to_home">Back to Home</string>
    <string name="no_data">Data Not Found</string>
    <string name="go_to_search">Go to Search</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>

    <string name="input_your_comment">Input your comment...</string>
    <string name="review_comment">Review Comment</string>
    <string name="must_be_filled">Must be filled</string>
    <string name="create_comment_success">Success create comment</string>
    <string name="interaction">Interaction</string>
    <string name="liked">Liked</string>
    <string name="commented">Commented</string>
    <string name="create_review_reminder">Create Review Reminder</string>
    <string name="input_reminder_message">Input reminder message</string>
    <string name="create_reminder">Create reminder</string>
    <string name="reminder_for_create_review">Reminder for Create Review</string>
    <string name="title_">"Title: "</string>
    <string name="message_">"Message: "</string>
    <string name="at_">"At: "</string>
    <string name="your_notification">Your Notification</string>
    <string name="notification">Notification</string>
    <string name="notif_liked">" has liked your review "</string>
    <string name="notif_commented">" has commented your review "</string>

    <string name="nike" translatable="false">Nike</string>
    <string name="adidas" translatable="false">Adidas</string>
    <string name="puma" translatable="false">Puma</string>
    <string name="skechers" translatable="false">Skechers</string>
    <string name="reebok" translatable="false">Reebok</string>
    <string name="none">None</string>
    <string name="like_asc">Like Asc.</string>
    <string name="rate_asc">Rate Asc.</string>
    <string name="like_desc">Like Desc.</string>
    <string name="rate_desc">Rate Desc.</string>
    <string name="like" translatable="false">review_likes</string>
    <string name="rate" translatable="false">review_rate</string>
    <string name="asc" translatable="false">asc</string>
    <string name="desc" translatable="false">desc</string>

    <string name="notif_followed">" has followed you"</string>
    <string name="notif_new_review">" has create new review "</string>
    <string name="success_delete_account">Successfully delete account!</string>
    <string name="success_register">Register Successful</string>


</resources>