<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/home"
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item android:title="@string/add"
        android:id="@+id/add"
        android:icon="@drawable/ic_baseline_add_24"/>
    <item
        android:id="@+id/wishlist"
        android:icon="@drawable/ic_baseline_bookmark_border_24"
        android:title="@string/wishlist" />
    <item
        android:id="@+id/reviewInTouch"
        android:icon="@drawable/ic_baseline_touch_app_24"
        android:title="@string/interaction" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile" />

</menu>