<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.SettingFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/black"
            android:text="@string/setting"
            android:textAlignment="center"
            android:textColor="@color/dark_yellow"
            android:textSize="24sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/logoutBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:backgroundTint="@color/dark_yellow"
                android:layout_marginLeft="10dp"/>

            <Button
                android:id="@+id/deleteAccBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_account"
                android:backgroundTint="@color/dark_yellow"
                android:layout_marginLeft="10dp"/>
            <Button
                android:id="@+id/changePasswordBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:backgroundTint="@color/dark_yellow"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>