<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="16dp"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/default_profile"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

        <TextView
            android:id="@+id/tvFullName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/full_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tvReviewerId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviewer_id"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnFollow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follow"
            android:textAlignment="center"
            android:textSize="13sp"
            android:gravity="center"
            android:visibility="visible"
            />

        <Button
            android:id="@+id/btnUnfollow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unfollow"
            android:textAlignment="center"
            android:textSize="13sp"
            android:gravity="center"
            android:visibility="gone"
            />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>