<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    xmlns:card_view="http://schemas.android.com/tools"
    tools:context=".Fragment.CreateReview"
    android:background="@color/light_yellow">

    <!-- TODO: Update blank fragment layout -->

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:cardCornerRadius="40dp"
            android:elevation="0dp"
            >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="30dp"
                card_view:cardElevation="0dp"
                android:elevation="0dp"
                >



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/black"
                    android:text="@string/create_review"
                    android:textAlignment="center"
                    android:textColor="@color/dark_yellow"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner_brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"
                    android:entries="@array/brands"
                    android:padding="5dp"
                    android:layout_marginTop="30dp"
                    android:prompt="@string/tag_prompt"
                    />

                <EditText
                    android:id="@+id/edt_review_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:width="10dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/review_title"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/edt_review_description"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:inputType="text|textMultiLine"
                    android:gravity="top"
                    android:layout_marginTop="20dp"
                    android:hint="@string/review_description"/>

                <EditText
                    android:id="@+id/edt_review_rate"
                    android:inputType="textPersonName|number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/rate_min_1_max_5"/>


                <LinearLayout
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:id="@+id/img"

                    android:layout_marginBottom="25dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_image"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/add_image"
                        android:layout_width="35dp"
                        android:layout_height="40dp"
                        android:text="+"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginLeft="5dp"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/remove_image"
                        android:layout_width="35dp"
                        android:layout_height="40dp"
                        android:text="-"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginLeft="5dp"/>
                </LinearLayout>

                <ImageView
                    android:id="@+id/image_preview"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:visibility="gone"/>


                <Button
                    android:id="@+id/btn_create_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/dark_yellow"
                    android:text="@string/create_post"
                    android:textStyle="bold"/>
                <Button
                    android:id="@+id/btn_create_remind"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/dark_yellow"
                    android:text="@string/create_reminder"
                    android:textStyle="bold"/>
            </LinearLayout>


    </ScrollView>
        </androidx.cardview.widget.CardView>
</FrameLayout>