<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/changePassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@color/white"
        app:cardCornerRadius="20dp"
        android:elevation="0dp"
        android:visibility="gone"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp"
            android:elevation="0dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:text="@string/change_password"
                android:textAlignment="center"
                android:textColor="@color/dark_yellow"
                android:textSize="24sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="10dp"
                android:layout_marginTop="20dp"
                android:hint="@string/new_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/confirmNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="10dp"
                android:layout_marginTop="20dp"
                android:hint="@string/confirm_new_password"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/submit_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/dark_yellow"
                android:text="@string/change_password"
                android:textStyle="bold"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/accountVerif"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@color/white"
        app:cardCornerRadius="20dp"
        android:elevation="0dp"
        android:visibility="visible"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp"
            android:elevation="0dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:text="@string/account_verification"
                android:textAlignment="center"
                android:textColor="@color/dark_yellow"
                android:textSize="24sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/et_verif_acc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="10dp"
                android:layout_marginTop="20dp"
                android:hint="@string/your_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/submit_verif_acc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/dark_yellow"
                android:text="@string/verification"
                android:textStyle="bold"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>